erDiagram
    USERS {
        int user_id PK
        string username UK
        string passwd
        string email UK
        string phone
        date created_at
        date last_login
        enum user_role
        int demographics_id FK
    }
    DEMOGRAPHICS {
        int demographics_id PK
        smallint race_id FK
        smallint gender_id FK
        smallint ethnicity_id FK
        date dob
        int created_by
        date created_at
        int updated_by
        date updated_at
    }
    RACE_CODE {
        smallint race_code PK
        string race_text
    }
    GENDER_CODE {
        smallint gender_code PK
        string gender_text
    }
    ETHNICITY_CODE {
        smallint ethnicity_code PK
        string ethnicity_text
    }
    DOCTOR {
        int doctor_id PK
        int user_id UK, FK
        string doctor_name
        string license_number
        int years_of_experience
    }
    PATIENT {
        int patient_id PK
        int user_id UK, FK
        string patient_name
        multivalued emergency_contacts
    }
    PATIENT_DOCTOR_JUNCTION {
        int patient_id PK, FK
        int doctor_id PK, FK
    }
    OFFICE {
        int office_id PK
        string office_name
        composite office_address
        string phone
        string email
        multivalued services
    }
    DOCTOR_OFFICES {
        int doctor_id PK, FK
        int office_id PK, FK
        time shift_start
        time shift_end
    }
    NURSE {
        int nurse_id PK
        int user_id UK, FK
        string nurse_name
        string license_number
        string specialization
        int years_of_experience
    }
    NURSE_OFFICES {
        int nurse_id PK, FK
        int office_id PK, FK
        time shift_start
        time shift_end
    }
    RECEPTIONIST {
        int receptionist_id PK
        int user_id FK
        string receptionist_name
    }
    RECEPTIONIST_OFFICES {
        int receptionist_id PK, FK
        int office_id PK, FK
        time shift_start
        time shift_end
    }
    APPOINTMENTS {
        int appointment_id PK
        int patient_id FK
        int doctor_id FK
        int office_id FK
        date appointment_datetime
        interval duration
        string reason
        enum status
        date created_at
        date updated_at
        int booked_by FK
        int attending_nurse FK
    }
    MEDICAL_RECORDS {
        int record_id PK
        int patient_id FK
        int doctor_id FK
        int appointment_id FK
        date created_at
        date updated_at
        string diagnosis
        string notes
    }
    PRESCRIPTION {
        int prescription_id PK
        int medical_record_id FK
        composite medication_info
        timestamp date_issued
        json pharmacy_details
    }
    TEST_RESULTS {
        int test_result_id PK
        int medical_record_id FK
        int test_performed_by FK
    }
    DETAILED_ALLERGIES {
        int allergy_id PK
        int medical_record_id FK
    }
    SPECIALIST_APPROVALS {
        int approval_id PK
        int patient_id FK
        int reffered_doctor_id FK
        int specialist_id FK
        timestamp requested_at
        timestamp approved_at
        enum status
    }
    BILLING {
        int billing_id PK
        int patient_id FK
        int appointment_id FK
        decimal amount_due
        decimal amount_paid
        enum payment_status
        date billing_due
        date created_at
        date updated_at
        int handled_by FK
    }
    SPECIALTIES_CODE {
        int specialty_code PK
        string specialty_name
    }
    DOCTOR_SPECIALTIES {
        int doctor_id PK, FK
        int specialtity_code PK, FK
    }
    APPOINTMENT_NOTES {
        int note_id PK
        int appointment_id FK
        string note_text
        int created_by_nurse FK
        int created_by_receptionist FK
        timestamp created_at
    }
    APPOINTMENT_CANCELLATIONS {
        int cancellation_id PK
        int appointment_id FK
        string canceled_reason
        timestamp canceled_at
    }

    USERS ||--o| DEMOGRAPHICS : "has"
    DEMOGRAPHICS }o--|| RACE_CODE : "uses"
    DEMOGRAPHICS }o--|| GENDER_CODE : "uses"
    DEMOGRAPHICS }o--|| ETHNICITY_CODE : "uses"
    USERS ||--o{ DOCTOR : "is a"
    USERS ||--o{ PATIENT : "is a"
    USERS ||--o{ NURSE : "is a"
    USERS ||--o{ RECEPTIONIST : "is a"
    DOCTOR ||--o{ PATIENT_DOCTOR_JUNCTION : "has"
    PATIENT ||--o{ PATIENT_DOCTOR_JUNCTION : "has"
    DOCTOR ||--o{ DOCTOR_OFFICES : "works at"
    OFFICE ||--o{ DOCTOR_OFFICES : "hosts"
    NURSE ||--o{ NURSE_OFFICES : "works at"
    OFFICE ||--o{ NURSE_OFFICES : "hosts"
    RECEPTIONIST ||--o{ RECEPTIONIST_OFFICES : "works at"
    OFFICE ||--o{ RECEPTIONIST_OFFICES : "hosts"
    PATIENT }o--o{ APPOINTMENTS : "has"
    DOCTOR }o--o{ APPOINTMENTS : "conducts"
    OFFICE ||--o{ APPOINTMENTS : "hosts"
    PATIENT ||--o{ MEDICAL_RECORDS : "has"
    DOCTOR ||--o{ MEDICAL_RECORDS : "creates"
    APPOINTMENTS |o--o{ MEDICAL_RECORDS : "results in"
    MEDICAL_RECORDS ||--o{ PRESCRIPTION : "includes"
    MEDICAL_RECORDS ||--o{ TEST_RESULTS : "includes"
    MEDICAL_RECORDS ||--o{ DETAILED_ALLERGIES : "includes"
    NURSE ||--o{ TEST_RESULTS : "performs"
    PATIENT ||--o{ SPECIALIST_APPROVALS : "requests"
    DOCTOR ||--o{ SPECIALIST_APPROVALS : "requests/approves"
    PATIENT ||--o{ BILLING : "receives"
    APPOINTMENTS ||--|| BILLING : "generates"
    DOCTOR }o--o{ DOCTOR_SPECIALTIES : "has"
    SPECIALTIES_CODE ||--o{ DOCTOR_SPECIALTIES : "belongs to"
    RECEPTIONIST ||--o{ APPOINTMENTS : "books"
    NURSE }o--o{ APPOINTMENTS : "attends"
    APPOINTMENTS ||--o{ APPOINTMENT_NOTES : "has"
    NURSE ||--o{ APPOINTMENT_NOTES : "creates"
    RECEPTIONIST ||--o{ APPOINTMENT_NOTES : "creates"
    APPOINTMENTS ||--o| APPOINTMENT_CANCELLATIONS : "may have"
    RECEPTIONIST ||--o{ BILLING : "handles"